Commit to update webpage 19/10/2023

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News"> Announcement of the SIMERPE2 Congress Plenary Speakers (25/07/2023) </a>
+              <p align="justify"> <a href="#News"> Talk by Marta Cousido in the "WKLIFEXII" (17/10/2023) </a>
 			   <br>
 			    <br>
-			  <img src="img/new141.png" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new147.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
@@ -1058,6 +1058,87 @@ further information of group organization and team composition can be found <a h
         <ul id="News-list" class="wow fadeInUp">
 
 							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News147"> Talk by Marta Cousido in the "WKLIFEXII" (17/10/2023) <i class="ion-android-remove"></i></a>
+            <div id="News147" class="collapse" data-parent="#News-list"> <p align="justify"> 
+            	On Tuesday 17, our colleague Marta Cousido presented the following communication:
+				"Challenges developing ad-hoc MSE for Sole in divisions 8.c and 9.a", with the participation also of Maria Grazia and Santiago Cerviño. 	
+			 <a href="https://www.ices.dk/community/groups/Pages/WKLIFEXII.aspx"> Go to he ICES web for more information.</a></p> 			 
+<div align="center"> <img src="img/new147.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News146"> Workshop 12 on the Development of Quantitative Assessment Methodologies based on Life-history traits "WKLIFEXII" (16-20/10/2023) <i class="ion-android-remove"></i></a>
+            <div id="News146" class="collapse" data-parent="#News-list"> <p align="justify"> 
+            Several members of the MERVEX group participate in the WKLIFEXII "Workshop 12 on the Development of Quantitative Assessment Methodologies 
+			based on Life-history traits, exploitation characteristics, and other relevant parameters for data-limited stocks".
+			From 16 to 20 October. Lisbon, Portugal and online.
+			WKLIFE deals on:
+			support the rollout of the recently developed new methods for ICES stocks in categories 2 and 3
+continue developing and prioritizing tasks of the 5-year WKLIFE roadmap,​
+initiate the review of methods for stocks in data-limited categories 4-6, 
+further evaluate and develop empirical harvest control rules and surplus production models,
+explore approaches for specific life-history types,
+provide updates on methods fo​r data and resource-limited fisheries.​​​		
+			 			 ​​​​​​<a href="https://www.ices.dk/community/groups/Pages/WKLIFEXII.aspx"> Go to he ICES web for full details.</a></p> 			 
+<div align="center"> <img src="img/new146.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News145"> Announcement on SIMERPE2: "Quick Talks" (27/09/2023) <i class="ion-android-remove"></i></a>
+            <div id="News145" class="collapse" data-parent="#News-list"> <p align="justify"> 
+            There will be contributions as "Quick Talks"
+            What do they consist of?
+             6 minutes oral contributions
+			 Tuesday 24th & Thursday 26th from 12:55-13:15h
+			 			 ​​​​​​<a href="https://math4fish.ieo.csic.es/scientific-programme/"> Go to the SIMERPE2 web for full programme.</a></p> 			 
+<div align="center"> <img src="img/new145.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News144"> Announcement on SIMERPE2 "Socio-economic components in fisheries management" session (27/09/2023) <i class="ion-android-remove"></i></a>
+            <div id="News144" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Thursday 26.10.23
+             Socio-economic components in fisheries management
+             Speakers:
+             JJGarcíadelHoyo from UniHuelva
+			 JoseMaríaDaRocha from Uvigo
+             Renato Rosa from UnivdeCoimbra
+			 Marga Andrés from AZTI
+			 			 ​​​​​​<a href="https://math4fish.ieo.csic.es/scientific-programme/"> Go to the SIMERPE2 web for full programme.</a></p> 			 
+<div align="center"> <img src="img/new144.PNG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News143"> ICES Annual Science Conference 2023 (11-14/09/2023) <i class="ion-android-remove"></i></a>
+            <div id="News143" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Several members of the group have participated in the ICES Annual Science Conference 2023 
+			 sharing their work with the rest of the ICES community. 
+			 			 ​​​​​​<a href="https://www.ices.dk/events/asc/2023/Pages/default.aspx"> Go to the ICES ASC 2023 web for full programme.</a></p> 			 
+<div align="center"> <img src="img/new143.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News142"> Announcement on SIMERPE2 thematic sessions (28/08/2023) <i class="ion-android-remove"></i></a>
+            <div id="News142" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             There will be three thematic sessions:
+			 Spatial complexity in stockassessment and fisheries management.
+             Stockassessment for stocks with different life history traits.
+             Socio-economic components in fisheries management.
+			 ​​​​​​<a href="https://math4fish.ieo.csic.es/scientific-programme/"> Go to the SIMERPE2 web for full programme.</a></p> 			 
+<div align="center"> <img src="img/new142.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+
+							 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News141"> Announcement of the SIMERPE2 Congress Plenary Speakers (25/07/2023) <i class="ion-android-remove"></i></a>
             <div id="News141" class="collapse" data-parent="#News-list"> <p align="justify"> 
              The coordinator of the MERVEX group, Santiago Cerviño, will be one of the guest speakers at the SIMERPE2 congress. 
@@ -1104,10 +1185,10 @@ further information of group organization and team composition can be found <a h
          </li>
 
 						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News137"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) <i class="ion-android-remove"></i></a>
+            <a data-toggle="collapse" class="collapsed" href="#News137"> Working Group on Mixed Fisheries Methodology "WGMIXFISH" (19-23/06/2023) <i class="ion-android-remove"></i></a>
             <div id="News137" class="collapse" data-parent="#News-list"> <p align="justify"> 
              Our colleagues Margarita Rincón and Santiago Cerviño are attending this WK. WGMIXFISH provides information for management advice and options which take into account the consequences of technical interactions in multistock, multigear fisheries.
-​​​​​​​​​​​​​​​​WGMIXFISH holds two meetings: WGMIXFISH-METHODS focuses on further methodological development and documentation​. 
+​​​​​​​​​​​​​​​​ WGMIXFISH holds two meetings: WGMIXFISH-METHODS focuses on further methodological development and documentation​. 
 WGMIXFISH-ADVICE aims to produce ​mixed fishery projections according to tested methodology and relating these to each stock’s single-species advice. ​​​​​​​​​​
             <a href="https://www.ices.dk/community/groups/Pages/WGMIXFISH-METHODS.aspx"> Go to the ICES page, for more information.</a></p> 			 
 <div align="center"> <img src="img/new137.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
@@ -1147,67 +1228,7 @@ demography and responses to fishing and climate across European Atlantic seas" (
 <div align="center"> <img src="img/new134.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News133"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) <i class="ion-android-remove"></i></a>
-            <div id="News133" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             Multiple members of the group will be in Copenhagen from 3-11 May for the WGBIE. At this meeting a total of 28 scientists from 5 countries:
-			 Portugal, Spain, France, Ireland and UK will discuss the assessment of 24 demersal fish and crustacean stocks. 		 
-            <a href="https://www.ices.dk/community/groups/Pages/WGBIE.aspx"> Go to the ICES page, for more information.</a></p> 			 
-<div align="center"> <img src="img/new133.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News132"> New article "First Maximum Sustainable Yield advice for the Nephrops norvegicus stocks of the Northwest Iberian
-			coast using stochastic Surplus Production model in Continuous Time (SPiCT)" (26/04/2023) <i class="ion-android-remove"></i></a>
-            <div id="News132" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             New article from the IMPRESS and Math4fish projects, 
-			 fantastically led by our colleague Isabel Herraiz, 
-			 on maximum sustainable yield for Norway lobster stocks on the northwest Iberian coast!
-             This study, besides being relevant to the sustainable exploitation of Norway lobster stocks, also provides valuable insight into 
-             the adequacy and limitations of production models for the assessment of crustacean stocks in general. 			 
-            <a href="https://www.frontiersin.org/articles/10.3389/fmars.2023.1062078/full"> Go to the article page, for more information.</a></p> 			 
-<div align="center"> <img src="img/new132.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News131"> 5th Symposium on effects of climatechange on the World's ocean (ECCWO5) (17-21/04/2023) <i class="ion-android-remove"></i></a>
-            <div id="News131" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             The congress will take place from 17-21 April in Bergen, Norway. Our colleague Anxo Paz participates with a panel communication, 
-			 which deals with the R Knobi package, to implement known biomass production models considering environmental effects.			 
-            <a href="https://github.com/MERVEX-group/knobi"> You can check it out in the MERVEX group's github repository.</a></p> 			 
-<div align="center"> <img src="img/new131.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News130"> Talk by Anxo Paz at the Iberian Research in Statistical Ecology (IRSE) (30/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News130" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             Yesterday, our colleague Anxo Paz, gave a talk at the Iberian Research in Statistical Ecology (IRSE),
-			 about a new library in R, the Knobi package implementing known biomass production models			 
-            <a href="https://groups.google.com/g/iberian-research-in-statistical-ecology-irse/c/pZlaYMUODeE"> Go to the IRSE web for more information.</a></p> 			 
-<div align="center"> <img src="img/new130.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News129"> Counting down for SIMERPE2 congress (24/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News129" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             7 months
-			 Counting down for SIMERPE2
-			 24OCT23 save the date!
-			 More information coming soon! Keep an eye!			 
-            <a href="https://math4fish.ieo.csic.es/welcome/"> Go to the SIMERPE2 web for more information.</a></p> 			 
-<div align="center"> <img src="img/new129.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-		 
+	 
 		 <li>
 		  
 		 <a href="./proof/previous news.html">Previous news could be consulted here.</a>
