--- a/proof/previous news.html
+++ b/proof/previous news.html
@@ -62,6 +62,63 @@
 		
         <ul id="News-list" class="wow fadeInUp">
 		
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News133"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) <i class="ion-android-remove"></i></a>
+            <div id="News133" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Multiple members of the group will be in Copenhagen from 3-11 May for the WGBIE. At this meeting a total of 28 scientists from 5 countries:
+			 Portugal, Spain, France, Ireland and UK will discuss the assessment of 24 demersal fish and crustacean stocks. 		 
+            <a href="https://www.ices.dk/community/groups/Pages/WGBIE.aspx"> Go to the ICES page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new133.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News132"> New article "First Maximum Sustainable Yield advice for the Nephrops norvegicus stocks of the Northwest Iberian
+			coast using stochastic Surplus Production model in Continuous Time (SPiCT)" (26/04/2023) <i class="ion-android-remove"></i></a>
+            <div id="News132" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             New article from the IMPRESS and Math4fish projects, 
+			 fantastically led by our colleague Isabel Herraiz, 
+			 on maximum sustainable yield for Norway lobster stocks on the northwest Iberian coast!
+             This study, besides being relevant to the sustainable exploitation of Norway lobster stocks, also provides valuable insight into 
+             the adequacy and limitations of production models for the assessment of crustacean stocks in general. 			 
+            <a href="https://www.frontiersin.org/articles/10.3389/fmars.2023.1062078/full"> Go to the article page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new132.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News131"> 5th Symposium on effects of climatechange on the World's ocean (ECCWO5) (17-21/04/2023) <i class="ion-android-remove"></i></a>
+            <div id="News131" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The congress will take place from 17-21 April in Bergen, Norway. Our colleague Anxo Paz participates with a panel communication, 
+			 which deals with the R Knobi package, to implement known biomass production models considering environmental effects.			 
+            <a href="https://github.com/MERVEX-group/knobi"> You can check it out in the MERVEX group's github repository.</a></p> 			 
+<div align="center"> <img src="img/new131.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News130"> Talk by Anxo Paz at the Iberian Research in Statistical Ecology (IRSE) (30/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News130" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Yesterday, our colleague Anxo Paz, gave a talk at the Iberian Research in Statistical Ecology (IRSE),
+			 about a new library in R, the Knobi package implementing known biomass production models			 
+            <a href="https://groups.google.com/g/iberian-research-in-statistical-ecology-irse/c/pZlaYMUODeE"> Go to the IRSE web for more information.</a></p> 			 
+<div align="center"> <img src="img/new130.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News129"> Counting down for SIMERPE2 congress (24/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News129" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             7 months
+			 Counting down for SIMERPE2
+			 24OCT23 save the date!
+			 More information coming soon! Keep an eye!			 
+            <a href="https://math4fish.ieo.csic.es/welcome/"> Go to the SIMERPE2 web for more information.</a></p> 			 
+<div align="center"> <img src="img/new129.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
 
 						 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News128"> There's still time to submit your work for the special issue of ICES journal (14/03/2023)   <i class="ion-android-remove"></i></a>
@@ -240,7 +297,7 @@
               She talked about how to combine at a practical level stock assessment models with
 			  the application of an ecosystem approach to fisheries management.
 			 <a href="https://euromarinenetwork.eu/activities/advances-in-fisheries-science-using-ecological-models-to-inform-current-fisheries-advice/"> More information.</a></p> 
-<div align="center"> <img src="img/new113.JPG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+<div align="center"> <img src="img/new113.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
 
@@ -250,7 +307,7 @@
             <div id="News112" class="collapse" data-parent="#News-list"> <p align="justify"> 
 			  This week we are partecipating to the SS3 and GADGET course in Cadiz organized by Math4Fish.
 			  <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p>
-<div align="center"> <img src="img/new112.JPG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+<div align="center"> <img src="img/new112.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
 
@@ -260,7 +317,7 @@
             <div id="News111" class="collapse" data-parent="#News-list"> <p align="justify"> 
 			  Today we are attending the workshop in “Advanced Species Distribution Modeling” in Guimaraes jointly with 
 			  and many others colleagues.
-<div align="center"> <img src="img/new111.JPG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+<div align="center"> <img src="img/new111.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
 
@@ -270,7 +327,7 @@
             <div id="News110" class="collapse" data-parent="#News-list"> <p align="justify"> 
 			   This week we are attending the WKLIFE XI, improving the assessment of data-limited stocks. 
    			 <a href="https://www.ices.dk/community/groups/Pages/WKLIFEXI.aspx"> More information.</a></p> 
-<div align="center"> <img src="img/new110.JPG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+<div align="center"> <img src="img/new110.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
 
@@ -283,7 +340,7 @@
                The theme is the same as for the SIMERPE symposium.
                Until 31 March 2023. 
    			 <a href="https://static.primary.prod.gcms.the-infra.com/static/site/icesjms/document/Call+for+papers_Advances+and+challenges+in+the+modelling+and+assessment+of+fishery+resources_Final.pdf?node=f75b6e8c3b7ccfa76961&version=1467759:ebc50897f828fb7803ed"> More information.</a></p> 
-<div align="center"> <img src="img/new109.JPG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+<div align="center"> <img src="img/new109.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
 
