Inclusion of the video presentation of the group, update of news and articles produced in 2023. Update to January 2024 by David J. Nachón.

--- a/proof/papers.html
+++ b/proof/papers.html
@@ -64,29 +64,40 @@
               <p>
 			  	<ul>	
  
-	<li><p align="justify"> González, I., Vila, Y., Cardinale, M., Berg, C. W., Winker, H., Azevedo, M., Mildenberger, T. K., Kokkalis, A., Vilamea, A. V., Morlán, R., Somavilla, R., <b>Pennino, M. G.</b> (2023). First Maximum Sustainable Yield advice for the Nephrops norvegicus stocks of the Northwest Iberian coast using stochastic Surplus Production model in Continuous Time (SPiCT). Frontiers in Marine Science, DOI: 10.3389/fmars.2023.1062078.
+
+
+	<li><p align="justify"> <b> Cousido-Rocha, M. </b>, Pennino, M.G., <b> Izquierdo, F. </b>, <b> Paz, A. </b>, Lojo, D., Tifoura, A., Zanni, Y., <b> Cerviño </b>, S.  (2022). Surplus Production Models: a practical review of recent approaches. Reviews in Fish Biology and Fisheries, 32, 1085-1102, doi.org/10.1007/s11160-022-09731-w 
+ <a href="https://link.springer.com/article/10.1007/s11160-022-09731-w"> Link</a></p></li>
+ 
+ 	<li><p align="justify"> <b> Cousido-Rocha, M. </b>, Carballo, M.G., Pennino, M.G., Coll, M., Báez, J.C. (2023). Differential effect of fisheries to the COVID-19 pandemic in the region of Andalusia (Spain). Marine Policy, 148, 105442. doi.org/10.1016/j.marpol.2022.105442.
+ <a href="https://www.sciencedirect.com/science/article/pii/S0308597X22004894"> Link</a></p></li>
+ 
+  	<li><p align="justify"> Sheerin, E., Power, A.M., Oesterwind, D., Haak, D., <b> Abad </b>, E., Barnwall, L., Petroni, M., Sobrino, I., Valeiras, J., Allcock, A.L. (2023). Marine Biology, 170, 1302 – 1320. doi.org/10.1007/s00227-023-04178-4.
+ <a href="https://link.springer.com/article/10.1007/s00227-023-04178-4"> Link</a></p></li>
+ 
+	<li><p align="justify"> <b> González, I. </b>, Vila, Y., Cardinale, M., Berg, C. W., Winker, H., Azevedo, M., Mildenberger, T. K., Kokkalis, A., Vilamea, A. V., Morlán, R., Somavilla, R., Pennino, M. G. (2023). First Maximum Sustainable Yield advice for the Nephrops norvegicus stocks of the Northwest Iberian coast using stochastic Surplus Production model in Continuous Time (SPiCT). Frontiers in Marine Science, DOI: 10.3389/fmars.2023.1062078.
  <a href="https://www.frontiersin.org/articles/10.3389/fmars.2023.1062078/full"> Link</a></p></li>
-
-	<li><p align="justify"> <b>Pennino, M. G.</b>, Rehren, J., Tifoura, A., Lojo, D., Marta Coll  (2023). Correction: New approaches to old problems: how to introduce ecosystem information into modern fisheries management advice. Hydrobiologia, 850, 1261.
- <a href="https://link.springer.com/article/10.1007/s10750-023-05155-0"> Link</a></p></li>	
-
-	<li><p align="justify"> <b>Pennino, M. G.</b>, Rehren, J., Tifoura, A., Lojo, D., Marta Coll  (2023). New approaches to old problems: how to introduce ecosystem information into modern fisheries management advice. Hydrobiologia, 850, 1251–1260.
- <a href="https://link.springer.com/article/10.1007/s10750-022-05083-5"> Link</a></p></li> 
  
-	<li><p align="justify"><b>Cousido-Rocha, M.</b>, Carballo, M. G., <b>Pennino, M. G.</b>, Coll, M., Báez, J. C. (2023). Differential effect of fisheries to the COVID-19 pandemic in the region of Andalusia (Spain). Marine Policy, 148, 105442.
- <a href="https://www.sciencedirect.com/science/article/pii/S0308597X22004894?via%3Dihub"> Link</a></p></li>
+ 	<li><p align="justify"> <b> Otero , J. </b> and Hidalgo, M. L.  (2023). Life-history traits and environment shape small pelagic fish demography and responses to fishing and climate across European Atlantic seas. ICES Journal of Marine Science, 80, 1447 – 1461. doi.org/10.1093/icesjms/fsad072. 
+ <a href="https://academic.oup.com/icesjms/article/80/5/1447/7152845"> Link</a></p></li>
 
-	<li><p align="justify">Sarzo, B., Martínez-Minaya, J., <b>Pennino, M. G.</b>, Conesa, D., Coll, M. (2023). Modelling seabirds biodiversity through Bayesian Spatial Beta regression models: A proxy to inform marine protected areas in the Mediterranean Sea. Marine Environmental Research, 185, 105860.
- <a href="https://www.sciencedirect.com/science/article/pii/S0141113622003051?via%3Dihub"> Link</a></p></li>
+	<li><p align="justify"> Bode, A., <b> Otero , J. </b>, Lamas, Á.F., Mompeán, C. (2023). Use of Formalin-Preserved Collections to Infer Trophic Indicators of Marine Zooplankton from Stable Isotopes. Diversity, 15, 1085 – 1102. doi.org/10.3390/d15030459.
+ <a href="https://www.mdpi.com/1424-2818/15/3/459"> Link</a></p></li>
 
-	<li><p align="justify">Antoniou, A., Manousaki, T., Ramírez, F., Cariani, A., Cannas, R., Kasapidis, P., Magoulas, A., Albo-Puigserver, M., Lloret-Lloret, E., Bellido, J. M., <b>Pennino, M. G.</b>, Follesa, M. C., Esteban, A., Saraux, C., Sbrana, M., Spedicato, M. T., Coll, M., Tsigenopoulos, C. S. 2023). Sardines at a junction: Seascape genomics reveals ecological and oceanographic drivers of variation in the NW Mediterranean Sea. Molecular Ecology, https://doi.org/10.1111/mec.16840.
- <a href="https://onlinelibrary.wiley.com/doi/10.1111/mec.16840"> Link</a></p></li>
+	<li><p align="justify"> Rodríguez-Pena, E., Suárez, D., Estévez-Pérez, G., <b> Verísimo, P. </b>, Barreira, N., Fernández, L., González-Tizón, A. , Martínez-Lage, A. (2023). Influence of storage time on the DNA integrity and viability of spermatozoa of the spider crab Maja brachydactyla. Animals, 13, 3555. doi.org/10.3390/ani13223555.
+ <a href="https://www.mdpi.com/2076-2615/13/22/3555"> Link</a></p></li>
  
- 	<li><p align="justify"> Karametsidis, G., Rueda, L., Bellido, J. M., Esteban, A., García, E., de Sola, L. G., <b>Pennino, M. G.</b>, <b>Pérez-Gil, J. L.</b>, Hidalgo, M.(2023). The trade-off between condition and growth shapes juveniles’ survival of harvested demersal fish of the Mediterranean sea. Marine Environmental Research, 184, 105844.
- <a href="https://www.sciencedirect.com/science/article/pii/S0141113622002896?via%3Dihub"> Link</a></p></li>
+ 	<li><p align="justify"> Rodríguez-Pena, E., Suárez, D., Estévez-Pérez, G., <b> Verísimo, P. </b>, Barreira, N., Fernández, L., González-Tizón, A. , Martínez-Lage, A. (2023). Influence of storage time on the DNA integrity and viability of spermatozoa of the spider crab Maja brachydactyla. Animals, 13, 3555. doi.org/10.3390/ani13223555.
+ <a href="https://www.mdpi.com/2076-2615/13/22/3555"> Link</a></p></li>
  
-  	<li><p align="justify"> Verba, J. T., Ferreira, C. E. L., <b>Pennino, M. G.</b>, Hagberg, L., Lopes, P. F. M., Ferreira, B. P., Lima, S. M. Q., Stow, A. (2023). Genetic structure of the threatened Gray Parrotfish (Sparisoma axillare) in the Southwestern Atlantic. Coral Reefs, 42, 105–117.
- <a href="https://link.springer.com/article/10.1007/s00338-022-02324-w"> Link</a></p></li>
+  	<li><p align="justify"> Pennino, M.G., <b> Cerviño, S. </b>, Coll. M. (2023). The challenges of modelling and assessing fisheries resources. ICES Journal of Marine Science, 80, 10, 2563–2566. doi.org/10.1093/icesjms/fsad181.
+ <a href="https://academic.oup.com/icesjms/article/80/10/2563/7420083"> Link</a></p></li>
+ 
+   	<li><p align="justify"> Almoutaz Mbaidin, Eva Cernadas, Zakaria A. Al-Tarawneh, Manuel Fernández-Delgado, <b> Rosario Domínguez-Petit </b>, Sonia Rábade-Uberos, Ahmad Hasanat. (2023). Multi-scale Canny filter to recognize cells in microscopic images. In: Ahmad Hassanat, Sami Mnasri, Ahmad S. Tarawneh (eds.). Latest Applications of Computer Vision and Machine Learning Techniques for Smart Sustainability. Sustainability, 15 (18): 13693. doi.org/10.3390/su151813693.  
+ <a href="https://www.mdpi.com/2071-1050/15/18/13693"> Link</a></p></li>
+
+   	<li><p align="justify"> ●	Ashley, M., Murillas, A., Muench, A., Marta-Pedroso, C., Rodwell, L., Rees, S., Cristina Marta-Pedroso, Lynda Rodwell, Sian Rees, Emma Rendle, Tea Bašić, Gordon H. Copp, Estibaliz Díaz, <b> David J. Nachón </b>, Patrick Lambert & Lassalle, G.  (2023). An evidence base of ecosystems services provided by diadromous fish in the European Atlantic Area. Ecosystem Services, 64, 101559.   
+ <a href="https://www.sciencedirect.com/science/article/pii/S2212041623000529?dgcid=rss_sd_all"> Link</a></p></li>
 
  
 </ul>		  	 
