--- a/proof/previous news.html
+++ b/proof/previous news.html
@@ -62,7 +62,99 @@
 		
         <ul id="News-list" class="wow fadeInUp">
 		
+	
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News141"> Announcement of the SIMERPE2 Congress Plenary Speakers (25/07/2023) <i class="ion-android-remove"></i></a>
+            <div id="News141" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The coordinator of the MERVEX group, Santiago Cerviño, will be one of the guest speakers at the SIMERPE2 congress. 
+			 Alexandra Silva from the Portuguese IPMA, Andrés Uriarte from AZTI in the Basque Country and Marta Ballesteros from CETMAR in Vigo. 
+			 ​​​​​​<a href="https://math4fish.ieo.csic.es/welcome/"> Go to the SIMERPE2 web for more information.</a></p> 			 
+<div align="center"> <img src="img/new141.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News140"> MERVEX group dissemination video (21/07/2023) <i class="ion-android-remove"></i></a>
+            <div id="News140" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             We would like to announce that we are preparing a video about the MERVEX group in order to make its members and the work they carry out in the MERVEX framework better known. 
+			 This week we started with the recordings at the Oceanographic Centre of Vigo: several members of the group were showing and explaining their lines of work to the documentary maker Rafael Méndez. 
+			 They talked about fisheries biology, modelling and scientific advice.
+			 In the coming weeks there will be more recordings. We will keep you informed of further developments.    ​​​​​​			 
+<div align="center"> <img src="img/new140.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News139"> Report on Radio Televisión Gallega about Norway lobster oceanographic campaigns (29/06/2023) <i class="ion-android-remove"></i></a>
+            <div id="News139" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Report on Radio Televisión Gallega about the oceanographic campaigns, in which some colleagues are taking part, to monitor the Norway lobster. 
+			 Unfortunately, the bad trend of Norway lobster stocks in Galicia, shown in the last article published by our colleague Isabel Rodríguez, is confirmed. 
+			 You can consult the article in the dissemination section of this page.   ​​​​​​
+            <a href="https://www.g24.gal/-/a-poboacion-de-cigala-segue-baixo-minimos-na-costa-galega"> Go to the RTVG website to see the video. </a></p> 			 
+<div align="center"> <img src="img/new139.PNG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+	
+
+	                                  <li>
+            <a data-toggle="collapse" class="collapsed" href="#News138"> XIX Conferencia Española y VIII Encuentro Iberoamericano de Biometría (CEB-EIB 2023)(27-30/06/2023) <i class="ion-android-remove"></i></a>
+            <div id="News138" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The congress has been held from 27 to 30 June in Vigo (Spain). Our colleagues Anxo Paz, Marta Cousido and Fran Izquierdo have participated with communications.
+			 ​​​​ You can consult the communications in the dissemination section of the website and the photographs of the congress on the MERVEX group's Twitter account. ​​​​​​
+            <a href="https://mervex-group.github.io/MERVEX/proof/congress.html"> MERVEX Dissemination link. </a></p> 			 
+<div align="center"> <img src="img/new138.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
 						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News137"> Working Group on Mixed Fisheries Methodology "WGMIXFISH" (19-23/06/2023) <i class="ion-android-remove"></i></a>
+            <div id="News137" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Our colleagues Margarita Rincón and Santiago Cerviño are attending this WK. WGMIXFISH provides information for management advice and options which take into account the consequences of technical interactions in multistock, multigear fisheries.
+​​​​​​​​​​​​​​​​ WGMIXFISH holds two meetings: WGMIXFISH-METHODS focuses on further methodological development and documentation​. 
+WGMIXFISH-ADVICE aims to produce ​mixed fishery projections according to tested methodology and relating these to each stock’s single-species advice. ​​​​​​​​​​
+            <a href="https://www.ices.dk/community/groups/Pages/WGMIXFISH-METHODS.aspx"> Go to the ICES page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new137.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News136"> Do you want to present your work at SIMERPE2 (01/06/2023) <i class="ion-android-remove"></i></a>
+            <div id="News136" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The organising committee has good news for you: the deadline for abstract submission has been extended until 15 June.
+            <a href="https://math4fish.ieo.csic.es/submit-abstracts/"> Go to the SIMERPE2 submission web.</a></p> 			 
+<div align="center"> <img src="img/new136.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News135"> New article "Life-history traits and environment shape small pelagic fish
+demography and responses to fishing and climate across European Atlantic seas" (17/05/2023) <i class="ion-android-remove"></i></a>
+            <div id="News135" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             New article led by our colleague Jaime Otero on the responses of small pelagic fish (SPFs) to fisheries and climate change impacts.
+			 The results of this study highlight the importance of recruitment for the population growth of SPFs 
+			 and illustrate how the contribution of recruitment varies among and within populations
+			 as a function of environmental conditions and life-history traits defining an ordination of SPFs
+			 along a slow-fast continuum with implications for population dynamics and the responses to endogenous and exogenous factors.
+            <a href="https://academic.oup.com/icesjms/article/80/5/1447/7152845?login=true"> Go to the article page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new135.PNG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News134"> International Day of Women in Mathematics (12/05/2023) <i class="ion-android-remove"></i></a>
+            <div id="News134" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Our colleague Marta Cousido took part in a video produced as part of the Math4fish project for the International Women in Mathematics Day. 		 
+            <a href="https://www.youtube.com/watch?v=cRMjbSALtUM"> Go to the Youtube page to watch the video.</a></p> 			 
+<div align="center"> <img src="img/new134.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+	
+                             	<li>
             <a data-toggle="collapse" class="collapsed" href="#News133"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) <i class="ion-android-remove"></i></a>
             <div id="News133" class="collapse" data-parent="#News-list"> <p align="justify"> 
              Multiple members of the group will be in Copenhagen from 3-11 May for the WGBIE. At this meeting a total of 28 scientists from 5 countries:
